[package]
name = "bpe_py"
version = "0.1.0"
edition = "2021"

[dependencies]
bpe = "0.2.0"
bpe-tokenizer = "0.1.4"
dashmap = {version = "6.1.0", features = ["rayon"] }
flate2 = "1.0.35"
indicatif = "0.17.9"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
rayon = "1.10.0"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "bpe_py"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]
