[build-system]
requires = ["maturin>=1.6.0"]
build-backend = "maturin"
version = "0.1.0"

[project]
name = "bpe_py"
requires-python = ">=3.7"
classifiers = [ 
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

